--- a/src/buttonHolders.css
+++ b/src/buttonHolders.css
@@ -1,15 +1,18 @@
 img {
     max-width: 100%;
-    height: auto;
+    align-items: center;
+    justify-content: center;
     border-radius: 25px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
 }
 
 .imageHolder {
-    padding: 20px 20px 20px 20px;
+    padding: 10px 10px 10px 10px;
 }
 
 .buttonHolders {
     width: 500px;
     padding: 10px 10px 10px 10px;
 }
-
